# ICP_Telegram_bot

./: Cargo.toml  README.md  canister_ids.json  config.json  deploy.sh  dfx.json  set-webhook.sh
src/icp_gpt_bot/: Cargo.toml  icp_gpt_bot.did
src/icp_gpt_bot/src/: bot.rs  gpt.rs  lib.rs  memory.rs  types.rs
